syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = ".;proto";

service User {
    rpc GetUserList(PageInfo) returns (UserListResponse); // 用户列表
    rpc GetUserByMobile(MobileRequest) returns (UserResponse); // 通过mobile获取用户
    rpc GetUserById(IdRequest) returns (UserResponse); // 通过id获取用户
    rpc CreateUser(CreateUserInfo) returns (UserResponse); // 添加用户
//    rpc UPdateUser(UpdateUserInfo) returns ()
}

message PageInfo {
    uint32 pn = 1;
    uint32 pSize = 2;
}

message MobileRequest {
    string mobile = 1;
}

message IdRequest {
    int32 id = 1;
}

message CreateUserInfo {
    string nickname = 1;
    string password = 2;
    string mobile = 3;

}

message UserResponse {
    int32 id = 1;
    string password = 2;
    string mobile = 3;
    string nickname = 4;
    uint64 birthday = 5;
    string gender = 6;
    int32 role = 7;
}

message UserListResponse {
    int32 total = 1;
    repeated UserListResponse data = 2;
}